Add some of the header components, switch to babelify for doing transforms so we can use ES6

--- a/server.html
+++ b/server.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/out/css/killrvideo.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/killrvideo.css" />
   </head>
   <body>
     <!-- App will be rendered here by killrvideo.js script -->
     <div id="killrvideo"></div>
-    <script src="/out/js/killrvideo.js" type="text/javascript"></script>
+    <script src="/static/js/killrvideo.js" type="text/javascript"></script>
   </body>
 </html>
