--- a/server.html
+++ b/server.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/static/css/killrvideo.css" />
+    <script src="/static/js/vendor.js" type="text/javascript"></script>
   </head>
   <body>
     <!-- App will be rendered here by killrvideo.js script -->
