--- a/dev/server.html
+++ b/dev/server.html
@@ -11,7 +11,7 @@
     
     <script type="text/javascript">
       var el = document.getElementById('killrvideo');
-      KillrVideo(el);
+      KillrVideo(el, { staticPath: '/static/' });
     </script>
   </body>
 </html>
