--- a/src/resources/static/server.html
+++ b/src/resources/static/server.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/static/css/killrvideo.css" />
+    <link rel="icon" type="image/png" href="/static/images/killrvideo-icon.png"/>
     <script src="/static/js/vendor.js" type="text/javascript"></script>
     <script src="/static/js/killrvideo.js" type="text/javascript"></script>
   </head>
