Pass the client config section from the server to the app when it's being loaded

--- a/src/resources/static/server.html
+++ b/src/resources/static/server.html
@@ -12,7 +12,10 @@
     
     <script type="text/javascript">
       var el = document.getElementById('killrvideo');
-      KillrVideo(el, { staticPath: '/static/' });
+      KillrVideo(el, { 
+        staticPath: '/static/',
+        clientConfig: CLIENT_CONFIG_VALUE_GOES_HERE
+      });
     </script>
   </body>
 </html>
